2008-05-25  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/ac3parse/gstac3parse.c: (gst_ac3parse_chain):
	  Fix alignment issue which isn't really an issue at all because
	  the plugin hasn't been ported to 0.10 yet.

2008-05-25  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Back to devel -> 0.10.8.1

=== release 0.10.8 ===

2008-05-21  Jan Schmidt <jan.schmidt@sun.com>

	* configure.ac:
	  releasing 0.10.8, "And yet"

2008-05-19  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.7.4 pre-release

2008-05-19  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/mad/gstmad.c: (gst_mad_convert_src), (gst_mad_chain):
	Fix inconsistent use of rate and channels.
	Fixes #533581

2008-05-19  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_send_event):
	Flush timestamp correction variables on a flush. Fixes #533832.

2008-05-14  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.7.3 pre-release

2008-05-13  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_parse_video_packet):
	Properly aggregate GstFlowReturn from downstream in order to properly
	stop, and doing that as early as possible.
	Fixes #532807

2008-05-10  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.7.2 pre-release

2008-05-10  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/mad/gstmad.c: (gst_mad_sink_event):
	* gst/mpegaudioparse/gstmpegaudioparse.c:
	(gst_mp3parse_sink_event):
	Always let FLUSH_START events flow downstream.

2008-05-07  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* configure.ac:
	  Error out if we don't have the required core/base versions.

2008-05-06  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_parse_mdpr),
	(gst_rmdemux_fix_timestamp), (gst_rmdemux_parse_video_packet),
	(gst_rmdemux_parse_audio_packet), (gst_rmdemux_parse_packet):
	Fix video timestamps by adjusting it with the first timestamp found.